docs(zh): 更新 Java 继承相关文档
- 修改侧边栏目录结构，调整 Java 继承相关章节顺序
- 修正文档中的方法重写示例和注意事项
- 新增继承中构造方法的特点和演示
- 详细说明 this 和 super 的使用方法和示例
- 增加 JavaBean 类的编写示例